components/gatekeeper-constraints/explicit-gateway-host/wildcard/test/gateway-allow2.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
  namespace: my-ns
spec:
  selector:
    app: my-gateway-controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - bookinfo.example.com
    - eu.bookinfo.example.com
